Close the delegation and workflow switches, and bind the status value
Several instanceof chains over already-sealed types are now pattern switches,
each losing an unchecked cast: Segment in WorkflowRunWorker and WorkflowRunner,
ParkedCompletion in CompleteStepAction, LookupResult in ConfluentSchemaPublisher,
Rule in MessageProjection. The last also deletes a throw for "Unknown rule kind"
that the compiler can now prove unreachable.

InProcessDelegationCoordinator.applyReview handled a Pending review by running
off the end of an if/else. That case is named and commented now. Same behaviour,
visible on the page.

The SQL in JdbcWorkflowRunStore moves to text blocks, about 17 statements. One
changed in more ways: markTerminal assembled the statement by splicing the
status value into the text, and binds it as a parameter now. Same 2 callers and
the same result, but a value concatenated into SQL is a form to remove even when
the value is an internal enum.

Note for anyone else converting spliced SQL: the newline after a text block's
opening delimiter is part of the syntax, not the string, so "SELECT " + COLS +
a text block joins with no separator and produces last_errorFROM.
JdbcWorkflowRunStoreIT reported it as a missing column. Both column constants
now end with a line break, with a comment explaining that.

The remainder is 11 sequenced-collection accessors, one Collectors.toList, and
threadId() replacing a deprecated getId() in a test.

No threading changes. The per-target semaphore and the Hikari pool are both
intentional limits with javadoc to that effect, and the registry locks need
timed tryLock, so they are not a pinning workaround.