@@ -98,7 +98,7 @@ public final class RunWorkflowAction implements ProtoAction {
         }
         List<WorkflowVerifier.Finding> findings = new WorkflowVerifier().verify(definition);
         if (!findings.isEmpty()) {
-            WorkflowVerifier.Finding first = findings.get(0);
+            WorkflowVerifier.Finding first = findings.getFirst();
             return refusal(first.step(), "workflow does not verify (" + findings.size()
                     + " finding" + (findings.size() == 1 ? "" : "s") + "); first: ["
                     + first.kind() + "] " + first.error());
